--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-
 /*  Variables */
 :root {
     /* Main Colors */
@@ -285,7 +284,8 @@ h4 {
     width: 130px;
     height: 290px;
     right: 0;
-    top: 50%;  /* Vertically center */
+    top: 50%;
+    /* Vertically center */
     transform: translateY(-50%);
 
     display: flex;
@@ -324,7 +324,7 @@ h4 {
 
 
 
-.theme{
+.theme {
     position: relative;
     width: 90px;
     height: 50px;
@@ -353,9 +353,9 @@ h4 {
     border-radius: 50%;
     position: relative;
     clip-path: circle(50% at 50% 50%) inset(0 0 0 50%);
-    transition: transform 0.5s ease-in-out, 
-                border-color 0s ease-in-out,
-                background-color 0.5s ease-in-out;
+    transition: transform 0.5s ease-in-out,
+        border-color 0s ease-in-out,
+        background-color 0.5s ease-in-out;
 }
 
 .circle {
@@ -368,8 +368,9 @@ h4 {
     transform: translateX(0px);
     opacity: 1;
     transition: transform 0.5s ease-in-out,
-                opacity 0.5s ease-in-out,   /* Added opacity transition */
-                width 0.5s ease-in-out;
+        opacity 0.5s ease-in-out,
+        /* Added opacity transition */
+        width 0.5s ease-in-out;
 }
 
 .circle.active {
@@ -379,7 +380,8 @@ h4 {
 
 .toggle-theme.active {
     transform: translateX(40px);
-    border: 2px solid var(--theme-base);     /* Border-color changes here */
+    border: 2px solid var(--theme-base);
+    /* Border-color changes here */
     background-color: #ffc830;
 }
 
@@ -400,8 +402,9 @@ h4 {
     box-shadow: 0px 0px 10px var(--theme-base);
 }
 
-.time{
-    color: var(--theme-base); /* Text color */
+.time {
+    color: var(--theme-base);
+    /* Text color */
     font-family: "Tektur", sans-serif;
     font-size: 50px;
     line-height: 1.2;
@@ -496,7 +499,7 @@ h4 {
     }
 }
 
-.navbar.active{
+.navbar.active {
     left: -150px;
 }
 
@@ -535,7 +538,7 @@ h4 {
     border-radius: 100px;
 }
 
-.nav-toggle:hover span{
+.nav-toggle:hover span {
     box-shadow: 0px 0px 5px var(--theme-base);
 }
 
@@ -623,7 +626,8 @@ h4 {
     color: var(--nav-hover);
     /* Change to highlight active link */
     font-weight: bold;
-    transform: translateX(20px);}
+    transform: translateX(20px);
+}
 
 .nav-links .line {
     height: 100%;
@@ -725,7 +729,7 @@ h4 {
 /* Styling for form */
 .contact-form {
     max-width: 500px;
-    height:400px;
+    height: 400px;
     margin: auto;
     padding: 20px 30px;
     background-color: var(--quaternary-color);
@@ -1002,6 +1006,10 @@ textarea {
     background: var(--quaternary-color);
     padding: 30px;
     width: 500px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     border-radius: 50px;
     /* border: 3px solid var(--navbar-bg); */
     box-shadow: 5px 5px 15px var(--navbar-bg);
@@ -1036,6 +1044,7 @@ textarea {
     gap: 10px;
     flex-wrap: wrap;
     justify-content: center;
+    align-items: center;
 }
 
 .skill-tag {
@@ -1144,8 +1153,8 @@ textarea {
 }
 
 .project-image img {
-    height: 200px;
     width: 100%;
+    max-width: 300px;
     border-radius: 40px;
     border: 3px solid var(--primary-color);
 }
@@ -1157,7 +1166,7 @@ textarea {
 }
 
 .project-content {
-    flex: .9;
+    flex: 1;
 }
 
 .project-content p {
@@ -1321,19 +1330,59 @@ textarea {
 }
 
 
+
+
+
 /* Mobile Styling */
 
-@media (max-width: 929px) {
+@media (max-width: 1250px) {
 
-    .stage {
+    .project-card-1 {
+        transform: translateX(0);
+    }
+
+    .project-card-2 {
+        transform: translateX(0);
+    }
+
+    #frontend.animate-in {
+        transform: translateX(0px);
+    }
+
+    #frontend.animate-out {
+        transform: translateX(0px);
+    }
+
+    #tools.animate-in {
+        transform: translateX(0px);
+    }
+
+    #tools.animate-out {
+        transform: translateX(0px);
+    }
+
+    .stage,
+    .stage-2 {
         display: none;
     }
 
-    .running-stage {
-        display: none;
+    .navbar {
+        left: -150px;
     }
 
+    .navbar.active {
+        left: 0px;
+    }
+
+    .stage-3 {
+        right: -130px;
+    }
+
+    .stage-3.active {
+        right: 0px;
+    }
 }
+
 
 @media (max-width: 767px) {
 
@@ -1357,13 +1406,6 @@ textarea {
     }
 
 
-    .stage,
-    .status,
-    .shape,
-    .text {
-        display: none;
-    }
-
 
     .about-content {
         flex-direction: column;
@@ -1384,12 +1426,29 @@ textarea {
         min-width: 125px;
     }
 
-    .skills-grid {
+    .skills-container,
+    .skill-category {
+        width: 350px;
+    }
+
+    .skill-items {
         flex-direction: column;
+        justify-content: center;
         align-items: center;
+        width: 40%;
     }
 
     .projects-container {
         align-items: center;
+    }
+
+    .project-card-1,
+    .project-card-2{
+        flex-direction: column;
+        height: auto;
+    }
+
+    .project-card-1 .project-image{
+        order: -1;
     }
 }
