--- a/style.css
+++ b/style.css
@@ -1446,6 +1446,7 @@ textarea {
     .project-card-2{
         flex-direction: column;
         height: auto;
+        width: 500px;
     }
 
     .project-card-1 .project-image{
