--- a/style.css
+++ b/style.css
@@ -406,7 +406,7 @@ h4 {
     color: var(--theme-base);
     /* Text color */
     font-family: "Tektur", sans-serif;
-    font-size: 50px;
+    font-size: 49.5px;
     line-height: 1.2;
 }
 
@@ -578,7 +578,7 @@ h4 {
 }
 
 .nav-container .logo {
-    font-size: 24px;
+    font-size: 23.5px;
     font-weight: bold;
     color: var(--nav-color);
     text-decoration: overline underline;
@@ -597,7 +597,7 @@ h4 {
     position: relative;
     text-decoration: none;
     padding-bottom: 5px;
-    font-size: 16px;
+    font-size: 15.5px;
     color: var(--nav-color);
     transition: transform 0.2s ease-in-out .2s;
 }
@@ -718,8 +718,9 @@ h4 {
     padding: 5px;
 }
 
+
 .contact-card h2 {
-    font-size: 22px;
+    font-size: 21.5px;
     color: white;
     justify-self: center;
     margin: 0;
@@ -729,9 +730,9 @@ h4 {
 /* Styling for form */
 .contact-form {
     max-width: 500px;
-    height: 400px;
+    height: 90%;
     margin: auto;
-    padding: 20px 30px;
+    padding: 15px 30px;
     background-color: var(--quaternary-color);
     /* border-radius: 10px; */
 }
@@ -743,7 +744,7 @@ h4 {
 
 .form-group label {
     font-weight: bold;
-    font-size: 16px;
+    font-size: 15.5px;
     color: var(--primary-color);
 }
 
@@ -854,19 +855,19 @@ textarea {
 
 .about-content h2 {
     font-family: "Capriola", sans-serif;
-    font-size: 32px;
+    font-size: 31.5px;
     color: var(--primary-color);
 
 }
 
 .about-content h3 {
-    font-size: 24px;
+    font-size: 23.5px;
     margin-bottom: 20px;
     color: var(--primary-color);
 }
 
 .about-content p {
-    font-size: 16px;
+    font-size: 15.5px;
     line-height: 1.8;
     color: var(--secondary-color);
     position: relative;
@@ -983,7 +984,7 @@ textarea {
 
 .skills-container h2 {
     position: relative;
-    font-size: 28px;
+    font-size: 27.5px;
     color: var(--primary-color);
     margin-bottom: 50px;
     background: var(--quaternary-color);
@@ -1034,7 +1035,7 @@ textarea {
 
 
 .skill-category h4 {
-    font-size: 20px;
+    font-size: 21.5px;
     margin-bottom: 10px;
     color: var(--primary-color)
 }
@@ -1070,7 +1071,7 @@ textarea {
     text-align: center;
     margin: 0;
     padding: 150px 50px 100px;
-    font-size: 12px;
+    font-size: 11.5px;
 
     opacity: 1;
     transition: opacity 0.5s ease-out, transform 0.5s ease-out;
@@ -1097,7 +1098,7 @@ textarea {
 
 .project-title h2 {
     position: relative;
-    font-size: 28px;
+    font-size: 27.5px;
     color: var(--primary-color);
     margin-bottom: 50px;
     background: var(--quaternary-color);
@@ -1139,11 +1140,11 @@ textarea {
 }
 
 .project-card-1 {
-    transform: translateX(21%);
+    transform: translateX(171px);
 }
 
 .project-card-2 {
-    transform: translateX(-21%);
+    transform: translateX(-171px);
 }
 
 .project-card-1:hover,
@@ -1165,7 +1166,7 @@ textarea {
 
 .project-content h3 {
     margin: 15px 0px;
-    font-size: 24px;
+    font-size: 23.5px;
     color: var(--primary-color);
 }
 
@@ -1189,11 +1190,28 @@ textarea {
     border-radius: 20px;
 }
 
+.project-link {
+    margin-bottom: 10px;
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: transform 0.5s ease-in-out;
+}
+
+.project-card-1:hover .project-link{
+    transform: translateX(171px);
+}
+
+.project-card-2:hover .project-link{
+    transform: translateX(-171px);
+}
+
 
 .project-link svg:hover {
     cursor: none;
     background-color: var(--primary-color);
-    transform: rotateX(0deg) rotateY(0deg) rotateZ(0deg);
+    /* transform: translateX(171px); */
     animation: shake .5s linear;
     color: var(--quaternary-color);
 }
