--- a/style.css
+++ b/style.css
@@ -925,6 +925,12 @@ textarea {
     /* transition: 1s; */
 }
 
+.github-icon, .email-icon, .linkedin-icon {
+    width: 24px;
+    height: auto;
+    color: var(--quaternary-color);
+}
+
 .contact-link:hover {
     background-color: var(--quaternary-color);
     border: 2px solid var(--primary-color);
@@ -933,6 +939,13 @@ textarea {
     transform: rotateX(0deg) rotateY(0deg) rotateZ(0deg);
     animation: shake .5s linear;
 }
+
+.contact-link:hover .github-icon,
+.contact-link:hover .email-icon,
+.contact-link:hover .linkedin-icon {
+    color: var(--primary-color);
+}
+
 
 @keyframes shake {
 
@@ -1067,7 +1080,7 @@ textarea {
 
 
 /* Projects Section */
-#projects {
+#projects{
     text-align: center;
     margin: 0;
     padding: 150px 50px 100px;
@@ -1091,12 +1104,12 @@ textarea {
     /* Reset rotation */
 }
 
-.project-title {
+.project-title, .certificate-title {
     width: 300px;
     justify-self: center;
 }
 
-.project-title h2 {
+.project-title h2, .certificate-title h2{
     position: relative;
     font-size: 27.5px;
     color: var(--primary-color);
@@ -1110,13 +1123,13 @@ textarea {
 
 }
 
-.projects-container {
+.projects-container{
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
-    padding: 30px 10px;
+    padding: 10px 10px;
     gap: 50px;
     overflow: hidden;
     animation: fade-in 1s ease-in-out, float 10s ease-in-out infinite 3s;
@@ -1207,7 +1220,6 @@ textarea {
     transform: translateX(-171px);
 }
 
-
 .project-link svg:hover {
     cursor: none;
     background-color: var(--primary-color);
@@ -1215,7 +1227,6 @@ textarea {
     animation: shake .5s linear;
     color: var(--quaternary-color);
 }
-
 
 .tech-stack {
     margin-top: 15px;
@@ -1233,9 +1244,97 @@ textarea {
 }
 
 
+#certifications {
+    text-align: center;
+    margin: 0px 10px 0px 10px;
+    padding: 150px 50px 100px;
+    font-size: 11.5px;
+
+    opacity: 1;
+    transition: opacity 0.5s ease-out, transform 0.5s ease-out;
+}
+
+.certificate-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    /* flex-wrap: wrap; */  /*Find out how to make it wrap around the screen (scrolling)*/
+    padding: 10px 10px;
+    gap: 50px;
+    overflow: hidden;
+    animation: fade-in 1s ease-in-out, float 10s ease-in-out infinite 3s;
+}
+
+.certificate-card-1,
+.certificate-card-2 {
+    /* display: flex; */
+    align-items: center;
+    justify-content: center;
+    background: var(--quaternary-color);
+    padding: 30px;
+    max-width: 400px;
+    /* min-width: 300px; */
+    height: 350px;
+    border-radius: 50px;
+    gap: 5%;
+    transform-origin: center;
+    transition: transform 0.5s ease-in-out;
+    box-shadow: 5px 5px 15px var(--navbar-bg);
+}
+
+
+.certificate-img {
+    display: flex;
+}
+
+.certificate-image img {
+    width: 100%;
+    max-width: 300px;
+    border-radius: 40px;
+    border: 3px solid var(--primary-color);
+}
+
+.certificate-content h3 {
+    margin: 15px 0px;
+    font-size: 23.5px;
+    color: var(--primary-color);
+}
+
+/* Experiment with this */
+.certificate-content {
+    flex: 1;
+}
+
+.certificate-link svg {
+    color: var(--primary-color);
+    width: 45px;
+    height: 33px;
+    padding: 5px;
+    margin-top: 10px;
+    border-radius: 20px;
+}
+
+.certificate-link {
+    margin-bottom: 10px;
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: transform 0.5s ease-in-out;
+}
+
+.certificate-link svg:hover {
+    cursor: none;
+    background-color: var(--primary-color);
+    /* transform: translateX(171px); */
+    animation: shake .5s linear;
+    color: var(--quaternary-color);
+}
 
 
 
+/* www.linkedin.com/in/mani-vardhan-kumpatla-b1107830b */
 
 
 .cursor-dot {
