--- a/style.css
+++ b/style.css
@@ -817,7 +817,8 @@ textarea {
     text-align: center;
     border-radius: 50px;
     padding: 50px 50px;
-    /* margin-left: 120px; */
+    margin-left: 20px;
+    margin-right: 20px;
     gap: 50px;
     display: flex;
     align-items: center;
@@ -1397,6 +1398,11 @@ textarea {
 
     .project-card-2 {
         transform: translateX(0);
+    }
+
+    .project-card-1:hover .project-link,
+    .project-card-2:hover .project-link{
+        transform: none;
     }
 
     #frontend.animate-in {
