--- a/style.css
+++ b/style.css
@@ -971,7 +971,7 @@ textarea {
 #skills {
     position: relative;
     text-align: center;
-    padding: 150px 50px 100px;
+    padding: 150px 100px 100px;
     width: auto;
     display: flex;
     align-items: center;
@@ -1150,7 +1150,7 @@ textarea {
     padding: 30px;
     max-width: 800px;
     min-width: 300px;
-    height: 300px;
+    height: auto;
     border-radius: 50px;
     gap: 5%;
     transform-origin: center;
@@ -1185,7 +1185,7 @@ textarea {
 }
 
 .project-content h3 {
-    margin: 15px 0px;
+    margin: 10px 0px;
     font-size: 23.5px;
     color: var(--primary-color);
 }
@@ -1212,7 +1212,7 @@ textarea {
     width: 40px;
     height: 30px;
     padding: 5px;
-    margin-top: 10px;
+    margin-top: 5px;
     border-radius: 20px;
 }
 
@@ -1242,7 +1242,7 @@ textarea {
 }
 
 .tech-stack {
-    margin-top: 15px;
+    margin-top: 10px;
     display: flex;
     gap: 10px;
     justify-content: center;
@@ -1260,7 +1260,7 @@ textarea {
 #certifications {
     text-align: center;
     margin: 0px 10px 0px 10px;
-    padding: 150px 50px 100px;
+    padding: 150px 20px 100px;
     font-size: 11.5px;
 
     opacity: 1;
@@ -1286,12 +1286,28 @@ textarea {
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    /* flex-wrap: wrap; */  /*Find out how to make it wrap around the screen (scrolling)*/
     padding: 10px 10px;
     gap: 50px;
     overflow: hidden;
     animation: fade-in 1s ease-in-out, float 10s ease-in-out infinite 3s;
+    overflow-x: auto;   /* enable horizontal scroll */
+    overflow-y: hidden; /* prevent vertical scroll */
+    scroll-behavior: smooth;
+    -webkit-overflow-scrolling: touch; /* scrolling on mobile */
+
+    mask-image: linear-gradient(to right, transparent, black 5%, black 95%, transparent);
+    mask-repeat: no-repeat;
+    mask-size: 100% 100%;
 }
+
+/* --- Remove scroll bar when carosel is active --- */
+/* .certificate-container::-webkit-scrollbar {
+    display: none;
+}
+.certificate-container {
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+} */
 
 .certificate-card-1,
 .certificate-card-2 {
@@ -1299,10 +1315,9 @@ textarea {
     align-items: center;
     justify-content: center;
     background: var(--quaternary-color);
-    padding: 30px;
-    width: auto;
-    /* min-width: 300px; */
-    height: 380px;
+    padding: 30px 20px 20px 20px;
+    width: 400px;
+    height: 400px;
     border-radius: 50px;
     gap: 5%;
     transform-origin: center;
@@ -1323,7 +1338,7 @@ textarea {
 }
 
 .certificate-content h3 {
-    margin: 10px 0px 0px 0px;
+    margin: 5px 0px 0px 0px;
     font-size: 23.5px;
     color: var(--primary-color);
 }
@@ -1342,7 +1357,7 @@ textarea {
     width: 45px;
     height: 33px;
     padding: 5px;
-    margin-top: 10px;
+    margin-top: 2px;
     border-radius: 20px;
 }
 
@@ -1471,6 +1486,10 @@ textarea {
         min-width: 250px;
     }
 
+    .certificate-container {
+    justify-content: flex-start;
+    }
+
     .certificate-card-1,
     .certificate-card-2 {
         height: 400px;
@@ -1528,7 +1547,7 @@ textarea {
     #skills,
     #projects,
     #contact {
-        padding: 150px 5px;
+        padding: 150px 15px;
     }
 
     #about img {
@@ -1538,14 +1557,14 @@ textarea {
 
     .skills-container,
     .skill-category {
-        width: 350px;
+        width: auto;
     }
 
     .skill-items {
         flex-direction: column;
         justify-content: center;
         align-items: center;
-        width: 40%;
+        /* width: 40%; */
     }
 
     .projects-container {
@@ -1557,8 +1576,7 @@ textarea {
     .project-card-2{
         flex-direction: column;
         height: auto;
-        max-width: 500px;
-        padding: 30px 15px;
+        padding: 30px 20px 20px 20px;
     }
 
     .project-card-1 .project-image{
@@ -1567,7 +1585,6 @@ textarea {
 
     .certificate-card-1,
     .certificate-card-2 {
-        height: 380px;
+        height: 350px;
     }
-
 }
